Fix css alignment

--- a/website/src/views/timetable/ModulesSelect.scss
+++ b/website/src/views/timetable/ModulesSelect.scss
@@ -81,6 +81,10 @@ $item-padding-vertical: 0.6rem;
     border-width: 0 $input-btn-border-width $input-btn-border-width;
     border-radius: 0 0 $btn-border-radius $btn-border-radius;
   }
+
+  div.tip:first-of-type {
+    margin-top: 0;
+  }
 }
 
 .item,
@@ -90,10 +94,10 @@ $item-padding-vertical: 0.6rem;
   font-size: 0.9rem;
   color: var(--body-color);
   background: var(--body-bg);
-}
 
-.tip:first-of-type {
-  margin-top: $input-height;
+  &:first-of-type {
+    margin-top: $input-height;
+  }
 }
 
 .option {
